--- a/src/Screens/SigninScreen/styles.css
+++ b/src/Screens/SigninScreen/styles.css
@@ -42,8 +42,7 @@
   display: block;
   color: #A99A77;
 }
-.login .form input,
-.login .form select{
+.login .form input{
   padding: 5px 10px;
   font-size: 15px;
   outline: none;
@@ -52,9 +51,6 @@
   -webkit-box-shadow: 0px 7px 30px -9px rgba(148,140,148,0.94);
   -moz-box-shadow: 0px 7px 30px -9px rgba(148,140,148,0.94);
   box-shadow: 0px 7px 30px -9px rgba(148,140,148,0.94)
-}
-.login .form select{
-  width: 100%;
 }
 .login .form input:focus{
   border-color: rgb(157, 157, 223);
@@ -69,7 +65,7 @@
   flex-direction: column;
   margin-top: 10px;
 }
-.login .form button{
+.login .form-button>button{
   padding: 8px 10px;
   font-size: 15px;
   outline: none;
@@ -78,6 +74,7 @@
   color: white;
   border-radius: 5px;
   cursor: pointer;
+  margin: 15px 0;
 }
 .login .form .confirm{
   display: flex;
