--- a/src/Screens/RegisterScreen/styles.css
+++ b/src/Screens/RegisterScreen/styles.css
@@ -49,6 +49,7 @@
   outline: none;
   border: 1px solid #AE9739;
   border-radius: 5px;
+    width: 100%;
   -webkit-box-shadow: 0px 7px 30px -9px rgba(148,140,148,0.94);
   -moz-box-shadow: 0px 7px 30px -9px rgba(148,140,148,0.94);
   box-shadow: 0px 7px 30px -9px rgba(148,140,148,0.94)
@@ -69,7 +70,7 @@
   flex-direction: column;
   margin-top: 10px;
 }
-.register .form button{
+.register .form-button button{
   padding: 8px 10px;
   font-size: 15px;
   outline: none;
@@ -78,6 +79,7 @@
   color: white;
   border-radius: 5px;
   cursor: pointer;
+  margin: 10px 0;
 }
 .register .form .confirm{
   display: flex;
@@ -105,7 +107,7 @@
   justify-content: space-between;
 }
 .register .dob input{
-  width: 45px;
+  width: 70px;
 }
 select{
   padding: 5px;
